--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# Add other versions of requirements as a comma separated list.
+# > pytorch>=1.0.0,<1.3.2
+# However, be sure all intermediate versions are supported.
 mypy==0.761
 pytest==5.3.5
 pytorch==1.3.1
